# Research-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: auto-research-agent-design.md  framework-and-sandbox-strategy.md  tech-stack-summary.md
research_agent/: __init__.py  cli.py  json_store.py  llm.py  models.py  orchestrator.py  sandbox.py  tools.py
src/research_agent/: __init__.py  main.py
src/research_agent/api/: __init__.py  app.py
src/research_agent/api/routes/: exploration.py
src/research_agent/core/: __init__.py  config.py  models.py  orchestrator.py
src/research_agent/llm/: __init__.py  wrapper.py
src/research_agent/memory/: __init__.py  manager.py
src/research_agent/storage/: __init__.py  models.py
src/research_agent/tools/: __init__.py  lister.py  reader.py  sandbox.py  search.py
tests/: conftest.py  test_integration.py  test_models.py  test_orchestrator.py  test_sandbox.py  test_tools.py
