[tool.poetry]
name = "research-agent"
version = "0.1.0"
description = "LLM-driven autonomous code exploration with Reason→Act→Learn→Memorize cycle"
authors = ["Research Agent Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ykirpichev/Research-agent"
documentation = "https://github.com/ykirpichev/Research-agent/tree/main/docs"
keywords = ["llm", "code-exploration", "agent", "research", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Tools",
]

[tool.poetry.dependencies]
python = "^3.10"

# LLM & AI
litellm = "^1.34"                    # Multi-provider LLM interface
pydantic = "^2.6"                    # Data validation & settings
pydantic-settings = "^2.1"           # Config management
python-dotenv = "^1.0"               # .env file support

# CLI & API
typer = "^0.9"                       # CLI framework
fastapi = "^0.109"                   # REST API framework
uvicorn = "^0.27"                    # ASGI server
httpx = "^0.26"                      # HTTP client for API calls

# Database & Storage
sqlalchemy = "^2.0"                  # ORM
alembic = "^1.13"                    # Database migrations
json5 = "^0.9"                       # JSON5 format support

# Utilities
click = "^8.1"                       # CLI utilities
tqdm = "^4.66"                       # Progress bars
pyyaml = "^6.0"                      # YAML support
tenacity = "^8.2"                    # Retry logic
requests = "^2.31"                   # HTTP library

# Async
asyncio-contextmanager = "^1.0"

# Logging
loguru = "^0.7"                      # Better logging

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"                      # Testing framework
pytest-asyncio = "^0.21"             # Async test support
pytest-cov = "^4.1"                  # Coverage
pytest-mock = "^3.12"                # Mocking
black = "^24.1"                      # Code formatter
ruff = "^0.2"                        # Linter
mypy = "^1.8"                        # Type checking
isort = "^5.13"                      # Import sorting
pre-commit = "^3.6"                  # Git hooks

# Documentation
sphinx = "^7.2"
sphinx-rtd-theme = "^2.0"

[tool.poetry.scripts]
research-agent = "research_agent.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool Configurations
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "W605",   # invalid escape sequence
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".mypy_cache",
]

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=research_agent --cov-report=html --cov-report=term-missing"
