[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-agent"
version = "0.1.0"
description = "LLM-driven sandboxed code exploration agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
openai = ["httpx>=0.27,<1"]
dev = ["pytest>=8,<9", "httpx>=0.27,<1"]

[project.scripts]
research-agent = "research_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["research_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
